QA_Project/force-app/main/default/objects/Instructor_Information__c/Instructor_Information__c.object-meta.xml
<CustomObject>
    <description>Contains records of instructor courses they can teach and their associated pricing</description>
    <label>Instructor Information</label>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructors Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>