QA_Project/force-app/main/default/objects/Instructor_Information__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Instructor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Instructors_Information</relationshipName>
    <type>Lookup</type>
</CustomField>