QA_Project/force-app/main/default/objects/Instructor_Information__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>